--- a/stylesmain_3.css
+++ b/stylesmain_3.css
@@ -1,3 +1,4 @@
+/*css reset*/
 * {
     margin: 0;
     padding: 0;
@@ -5,10 +6,52 @@
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+    font-family: "Roboto", sans-serif;
+    text-decoration: none;
+    color: #F3EBFF;
 }
 
-.carousel
+main {
+    background-color: #F3EBFF;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+}
 
 .product-image-carousel {
-    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.carousel-card {
+    padding: 15px;
+
+}
+
+section .carousel-card .product-image-carousel {
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+}
+
+.product-leaf-carousel {
+    background-color: #2E0F54;
+}
+
+.carousel-container-wrapper .carousel-card{
+    border: 1px solid gray;
+}
+
+header {
+    border: 1px solid green;
+    padding: 10px;
+}
+
+.carousel {
+    display: flex;
+}
+
