--- a/css/style_main1.css
+++ b/css/style_main1.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
 .contenitore-generale {
     width: 1600px;
     margin: 0 auto;
@@ -17,6 +23,7 @@
 
 .align-slider-main1 {
     text-align: center;
+    margin-bottom: 0;
 }
 
 .align-slider-main1 img {
@@ -42,5 +49,6 @@
 }
 
 .background_main1 {
+    margin-top: 0;
     background-color: #ffdf7e;
 }
