--- a/css/global_style.css
+++ b/css/global_style.css
@@ -5,7 +5,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 .contenitore-generale {
-    width: 1600px;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -22,12 +22,16 @@
 }
 
 .align-slider-main1 {
+    height: 450px;
     text-align: center;
     margin-bottom: 0;
+    background-color: black;
 }
 
 .align-slider-main1 img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .testoslider-main1 img {
