--- a/css/global_style.css
+++ b/css/global_style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+/* STILE SECTION 1 */
 .contenitore-generale {
     width: 80%;
     margin: 0 auto;
