--- a/css/global_style.css
+++ b/css/global_style.css
@@ -57,3 +57,33 @@
     margin-top: 0;
     background-color: #ffdf7e;
 }
+
+ /*proprietà delle container generale delle icone*/
+.icon-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center; /* per centrare le iconcine */
+    text-align: center; /* per centrare il testo */
+    padding: 0 10%; /* aggiunge un padding sinistro e destro del 10% del contenitore */
+    max-width: 1200px; /* puoi regolare questa larghezza massima secondo le tue esigenze */
+    margin: 0 auto;
+  }
+
+ /*proprietà delle icone*/
+  .icon {
+    text-decoration: none; /* Rimuove il sottolineato dai link, utilissimo */
+    color: black; /* colore del testo nero */
+  }
+
+/*iconcine sotto l'immagine slider*/
+  .icon img {
+    width: 100px; /* per omologare tutte le immagini */
+    height: auto; /* per non distorcerle */
+  }
+
+/*testo sotto le immagini*/
+  .icon span {
+    display: block; /* rende il testo un blocco per forzarlo sotto l'immagine */
+    margin-top: 8px; /* spazio tra l'immagine e il testo */
+  }
+  
