--- a/css/global_style.css
+++ b/css/global_style.css
@@ -1,9 +1,17 @@
+@font-face {
+  font-family: 'CeraPRO';
+  src:  url('CeraPro-Regular.woff2') format('woff2'),
+        url('CeraPro-Regular.woff2') format('woff');
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: 'CeraPro';
 }
+
+
 /* STILE SECTION 1 */
 .contenitore-generale {
     width: 80%;
