--- a/css/palette-colori.css
+++ b/css/palette-colori.css
@@ -4,7 +4,7 @@
     --yellow-lego-color: #fecf03;
     --orange-buttom-color: #fd8023;
     --sfondo-footer1-color: #f2f2f2 ;
-    --sfondo-footer2-color: #1f1d48 ;
+    --sfondo-footer2-color: #330c53 ;
     --sfondo-footer3-color: #1f1d48
 }
 
