--- a/css/global_style.css
+++ b/css/global_style.css
@@ -8,13 +8,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'CeraPro';
+    font-family: 'CeraPro';    
 }
 
 
 /* STILE SECTION 1 */
 .contenitore-generale {
-    width: 80%;
+    width: 85%;
     margin: 0 auto;
 }
 
@@ -95,3 +95,196 @@
     margin-top: 8px; /* spazio tra l'immagine e il testo */
   }
   
+
+/*STILE SECTION 3*/
+.section-3 {
+  height: 70%;
+  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #F3EBFF;
+}
+
+a {
+  text-decoration: none; /*per togliere linea ai link*/
+  color: inherit;
+}
+
+.section3-wrapper {
+  height: 450px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.carousel-container-wrapper{
+  width: 100%;
+}
+
+.carousel {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.card-slider-container {
+  display: flex;
+  width: 95%;
+  align-content: center;
+  justify-content: center;
+}
+
+.carousel-card { 
+  position: relative;
+  background: #fff;
+  height: 300px;
+  width: 184.46px;
+  display: none;
+  margin-right: 30px;
+}
+
+/*stile button scorrimento*/
+.carousel-button {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  user-select: none;
+  z-index: 1;
+
+  padding: 0;
+  margin: 0.5rem;
+  border-radius: 50%;
+  background-color: transparent;
+  border: none;
+  transition: color 0.1s;/*rende la transizione più smooth applicandole un delay*/
+}
+
+.carousel-button:hover {
+  color: gray; /*colore che appare quando passi sopra con il mouse*/
+}
+.carousel-button-previous {
+  left: 0;
+}
+
+.carousel-button-next{
+  right: 0;
+}
+
+/*stile topbar carosello*/
+.carousel-topbar {
+  margin-left: 40px;
+  font-size: 1.4rem;
+  padding-bottom: 10px;
+}
+
+.carousel-title {
+  font-weight: 500;
+}
+
+/*style immagine*/
+.product-image-carousel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 184.46px;
+  width: 184.46px;
+  background-color: white;
+  /*border: solid 1px black;*/
+}
+
+.img-carousel-section3 {
+  max-width: 87%;
+  max-height: 87%;
+  object-fit: cover;
+  transition: transform 0.5s ease;
+}
+
+.img-carousel-section3:hover {
+  transform: scale(1.1)
+}
+
+/*style leaf carousel*/
+.product-leaf-carousel {
+  background-color: #2E0F54;
+  height: 115.54px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: white;
+}
+
+.product-name {
+  font-size: 0.65rem;
+  font-weight: 800;
+  height: 20%;
+  padding: 10px 15px;
+}
+
+.link-style-section3 {
+  border-bottom: 1px solid transparent;
+  transition: border-bottom 0.3s ease;
+}
+
+.link-style-section3:hover {
+  border-bottom: 1px solid white;
+}
+
+.price-product-carousel {
+  padding-left: 15px;
+  padding-top: 15px;
+  font-size: 0.8rem;
+  font-weight: bolder;
+}
+
+.trademark {
+  vertical-align: top;
+  font-weight: 600;
+}
+
+/*style bottone add to Bag*/
+.container-button {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-bottom: 10px;
+}
+
+.button-addtoBag {
+  background-color: #F8CF31;
+  font-size: small;
+  font-weight: 900;
+  height: 40px;
+  width: 85%;
+  justify-content: center;
+  border-radius: 3px;
+  border: none;
+  font-size: 0.7rem;
+}
+
+/*scrollbar carosello*/
+.carousel-progressbar {
+  display: flex;
+  align-content: center;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
