--- a/css/global_style.css
+++ b/css/global_style.css
@@ -11,6 +11,44 @@
     font-family: 'CeraPro';    
 }
 
+/*STILE NAVBAR*/
+#high_bar {
+  display: flex;
+  /* Make the navigation bar container a flexbox */
+  padding: 20px;
+}
+
+#high_msg {
+  display: inline-block;
+  /* Make the "high_msg" div inline-block */
+  margin-left: auto;
+  /* Optionally add margin to the left for spacing */
+  margin-right: auto;
+  /* Optionally add margin to the right for spacing */
+}
+
+#menu {
+  background-color: #ffcdcb;
+}
+
+#menu_icons {
+  float: right;
+}
+
+#menu_words a {
+  font-size: 1em;
+  color: #1f1d48;
+  padding: 20px;
+  vertical-align: center;
+  text-decoration: none;
+}
+
+#menu_words a:hover {
+  font-size: 1em;
+  color: #1f1d48;
+  text-decoration: underline;
+  text-decoration-thickness: 0.2em;
+}
 
 /* STILE SECTION 1 */
 .contenitore-generale {
@@ -95,7 +133,43 @@
     margin-top: 8px; /* spazio tra l'immagine e il testo */
   }
   
+/*STILE SECTION 2*/
+.container-section2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: auto;
+  width: 80%;
+  background-color: #fecf03;
+}
 
+.main-section2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  width: 80%;
+}
+
+.title-main-section2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  width: 100%;
+  padding: 10px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.container-card {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
 
 /*STILE SECTION 3*/
 .section-3 {
@@ -289,8 +363,82 @@ a {
 .dot:hover {
   background-color: #717171;
 }
-  /*
-  
-  
-  */
 
+/*STILE SECTION 6*/
+.container-section6_bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+      
+.section6_bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90px;
+  width: 80%;
+  background-color: #1f1d48;
+  gap: 50px;
+}
+
+.text_bar {
+  font-size: xx-large;
+  font-weight: bold;
+  color: aliceblue;
+}
+
+.button-section6 {
+  display: flex;
+  gap: 25px;
+}
+
+.button6_1 .button6_2{
+  font-weight: bold;
+  background-color: #1f1d48;
+  text-decoration: none;
+  color: aliceblue;
+  border: 2px solid aliceblue;
+  border-radius: 30px;
+  padding: 15px;
+}
+
+.button-section6 :hover {
+  background-color: aliceblue;
+  color: black;
+  text-decoration: underline;
+}
+
+/*STILE SECTION 8*/
+
+
+/*STILE FOOTER 1*/
+.container-footer1 {
+  background-color: #f0f0f0;
+  padding: 20px;
+  border-radius: 10px;
+  margin: 20px;
+}
+
+/*STILE FOOTER 2*/
+
+/*STILE FOOTER 3*/
+.f_section3 {
+  font-family: Arial, sans-serif;
+  font-size: small;
+  background-color: #1f1d48;
+  color: white;
+}
+
+.container-footer3 {
+  color: white;
+  display: flex;
+}
+
+.element {
+  margin-right: 35px;
+
+}
+
+.link {
+  color: white;
+}
