--- a/css/global_style.css
+++ b/css/global_style.css
@@ -139,7 +139,7 @@
   flex-direction: row;
   justify-content: center;
   height: auto;
-  width: 80%;
+  width: 100%;
   background-color: #fecf03;
 }
 
@@ -169,6 +169,16 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  width: 50%;
+  height: auto;
+}
+
+.card{
+  width: 100%;
+}
+
+.img-section2{
+  width: 100%;
 }
 
 /*STILE SECTION 3*/
@@ -376,7 +386,7 @@ a {
   justify-content: center;
   align-items: center;
   height: 90px;
-  width: 80%;
+  width: 100%;
   background-color: #1f1d48;
   gap: 50px;
 }
@@ -409,7 +419,61 @@ a {
 }
 
 /*STILE SECTION 8*/
+.container-section8 {
+  width: 80%;
+  margin: 0 auto;
+  background-color: #330c53;
+  color: aliceblue;
+  position: relative;
+}
 
+.title {
+  margin-bottom: 10px;
+  padding: 10px;
+  width: 80%;
+}
+
+.title-text {
+  margin-top: 10px;
+  font-size: xx-large;
+  width: 80%;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  height: auto;
+}
+
+.card {
+  width: 20%;
+  margin: 10px;
+  margin-bottom: 60px;
+}
+
+.img-section8 {
+  width: 100%;
+  height: auto;
+}
+
+.card h3,
+p {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.button8 {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+}
+
+.button-hover :hover {
+  color: white;
+  text-decoration: underline;
+}
 
 /*STILE FOOTER 1*/
 .container-footer1 {
