--- a/css/global_style.css
+++ b/css/global_style.css
@@ -421,7 +421,7 @@ a {
   align-items: center;
   height: 90px;
   width: 100%;
-  background-color: #1f1d48;
+  background-color: #2E0F54;
   gap: 50px;
 }
 
@@ -438,7 +438,7 @@ a {
 
 .button6{
   font-weight: bold;
-  background-color: #1f1d48;
+  background-color: #2E0F54;
   text-decoration: none;
   color: aliceblue;
   border: 2px solid aliceblue;
@@ -453,7 +453,81 @@ a {
 }
 
 /*STILE SECTION 8*/
+.container-section8 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: auto;
+  width: 100%;
+  background-color: #2E0F54;
+  color: white;
+}
 
+.main-section8 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  width: 80%;
+  padding-top: 65px;
+}
+
+.title-main-section8 {
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  width: 100%;
+  padding: 10px;
+}
+
+.container-s8 {
+  display: flex;
+  justify-content: center;
+}
+
+.container-card8 {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  width: 50%;
+  height: auto;
+}
+
+.card{
+  width: 100%;
+}
+
+.img-section8{
+  width: 100%;
+}
+
+.container-h3-s8{
+  display: flex;
+  justify-content: center;
+  padding-top: 15px;
+}
+
+.container-text-s8{
+  padding-top: 10px;
+}
+
+.container-shop-now8{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  padding: 20px;
+}
+
+.shop-now8{
+  font-weight: bold;
+}
+
+.iper-centrale-s8:hover{
+  text-decoration: underline;
+}
 
 /*STILE FOOTER 1*/
 .container-footer1 {
