Cambiati testi in inglese section2

--- a/css/global_style.css
+++ b/css/global_style.css
@@ -211,6 +211,13 @@
   font-weight: bold;
 }
 
+.snow2-2{
+  padding-top: 45px ;
+}
+
+.snow2-3{
+  padding-top: 60px;
+}
 .iper-centrale-s2:hover{
   text-decoration: underline;
 }
