Aggiunta immagine di separazione tra la section 8 e la 9

--- a/css/global_style.css
+++ b/css/global_style.css
@@ -593,6 +593,12 @@ a {
   text-decoration: underline;
 }
 
+/*SEPARATORE SECTION8-9*/
+
+.imgbk9{
+  width: 100%;
+}
+
 /*STILE FOOTER 1*/
 .container-footer1 {
   background-color: #f0f0f0;
