--- a/css/global_style.css
+++ b/css/global_style.css
@@ -695,6 +695,16 @@ a {
 }
 
 /*STILE FOOTER 2*/
+.container-footer2-generale{
+  width: 100%;
+  background-color: #1f1d48;
+}
+
+.f_section2{
+  padding-top:30px ;
+  padding-right: 300px;
+  padding-left: 300px ;
+}
 
 .container-generale-footer2{
   display: flex;
@@ -743,7 +753,7 @@ a {
   color: #f0f0f0;
   padding: 7px;
   margin: 15px;
-  width: 40%;
+  width: 45%;
   gap:15px;
 }
 
@@ -842,6 +852,9 @@ a {
   font-size: small;
   background-color: #1f1d48;
   color: white;
+  padding-top: 20px;
+  padding-left: 300px;
+  padding-right: 300px;
 }
 
 .container-footer3 {
