added overflow sect1

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -112,6 +112,7 @@
 .background_main1 {
     margin-top: 0;
     background-color: #ffdf7e;
+    overflow:hidden;
 }
 
  /*proprietà delle container generale delle icone*/
