Modificate freccette dei link della section1

--- a/css/global_style.css
+++ b/css/global_style.css
@@ -114,6 +114,12 @@
     background-color: #ffdf7e;
 }
 
+.freccia-s1 {
+  font-family: sans-serif;
+  font-size:small;
+  font-weight: 200;
+}
+
  /*proprietà delle container generale delle icone*/
 .icon-container {
     display: flex;
