--- a/css/global_style.css
+++ b/css/global_style.css
@@ -690,6 +690,7 @@ a {
 
 .container-shop-now9{
   display: flex;
+  align-items: center;
   justify-content: center;
   gap: 5px;
   padding: 20px;
