--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -251,7 +251,7 @@ a {
   color: inherit;
 }
 
-.section3-wrapper {
+.carousel-section-wrapper {
   height: 700px;
   width: 100%;
   display: flex;
@@ -298,16 +298,31 @@ a {
   z-index: 1;
 
   padding: 0;
-  margin: 0.5rem;
   border-radius: 50%;
   background-color: transparent;
   border: none;
   transition: color 0.1s;/*rende la transizione più smooth applicandole un delay*/
+
+  width: 50px;
+  height: 50px;
+
+  background-color: rgb(224, 224, 224);
+  /*border: 2px solid rgb(224, 224, 224); /* Colore del bordo */
+  border-radius: 50%;
+
+  margin: 5px;
 }
 
-.carousel-button:hover {
-  color: gray; /*colore che appare quando passi sopra con il mouse*/
+.fa-solid {
+  font-size: 24px;
 }
+
+
+.carousel-button:hover {
+  background-color: transparent; /*colore che appare quando passi sopra con il mouse*/
+  border: 2px solid rgb(224, 224, 224);
+}
+
 .carousel-button-previous {
   left: 0;
 }
@@ -391,6 +406,7 @@ a {
 }
 
 /*style bottone add to Bag*/
+
 .container-button {
   display: flex;
   justify-content: center;
@@ -410,27 +426,72 @@ a {
   font-size: 1.0rem;
 }
 
-/*scrollbar carosello*/
-.carousel-progressbar {
-  display: flex;
-  align-content: center;
-}
-
-.dot {
+.button-addtoBag:hover{
+  background-color: #2E0F54;
   cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  transition: background-color 0.6s ease;
+  border:1px solid #F8CF31;
+  color: #F3EBFF;
 }
 
-.active,
-.dot:hover {
-  background-color: #717171;
+.product-leaf-carousel {
+  background-color: #2E0F54;
+  height: 207px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: white;
+  padding: 12px 10px 10px 10px ;
 }
 
+/*scrollbar carosello*/
+
+
+/*STILE SECTION4*/
+#section4-container {
+  background-color: white;
+}
+
+#leaf-product-section4 {
+  background-color: white;
+  color: black;
+  padding: 0;
+}
+
+#product-name-section4 {
+  padding: 13px 0;
+}
+
+#price-section4 {
+  padding-top: 30px;
+  padding-left: 0;
+}
+
+#button-section4 {
+  width: 100%;
+  height: 60px;
+  background-color: rgb(233, 111, 20);
+}
+
+#button-section4:hover {
+  background-color: white;
+  border: solid 2px rgb(233, 111, 20);
+  color: black;
+}
+
+#img-carousel-section4 {
+  border: solid 2px rgb(224, 224, 224);
+}
+
+#btt-section4 {
+  background-color: transparent;
+  border: solid 2px rgb(224, 224, 224);
+}
+
+#btt-section4:hover {
+  background-color: rgb(224, 224, 224);
+}
+ 
 /*STILE SECTION 6BAR*/
 .container-section6_bar {
   display: flex;
@@ -530,8 +591,22 @@ a {
   color: black;
 }
 
+#section7-carousel {
+  background-color: #2E0F54;
+}
 
+#carousel-title-section7 {
+  color: white;
+}
 
+#btt-section7 {
+  color: white;
+  background-color: rgb(76, 38, 111);
+}
+#btt-section7:hover {
+  color: black;
+  background-color: white;
+}
 /*STILE SECTION 8*/
 .container-section8 {
   display: flex;
