--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -30,12 +30,17 @@
 }
 
 .button-area-giochi {
+  display: flex;
+  gap: 5px;
   background-color: #abd9ff;
   text-decoration: none;
   padding: 5px;
-  border-radius: 7px;
+  padding-left: 12px;
+  padding-right: 12px;
+  border-radius: 3px;
   color: black;
-  font-size: large;
+  font-size: small;
+  /* font-weight: bold; */
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
