Aggiunto hover a mar10-shop-now

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -66,6 +66,9 @@
   text-decoration: none;
   color: #005aD2;
 }
+.mar10-shop-now:hover{
+  text-decoration: underline;
+} 
 
 .sign-in-box {
   display: flex;
