fixed font inm button-area-giochi

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -41,7 +41,7 @@
   border-radius: 3px;
   color: black;
   font-size: small;
-  /* font-weight: bold; */
+  font-weight: 600;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
