--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -1,15 +1,32 @@
 @font-face {
-  font-family: 'CeraPRO';
-  src:  url('CeraPro-Regular.woff2') format('woff2'),
-        url('CeraPro-Medium.woff2') format('woff'),
-        url('CeraPro-Bold.woff2') format('woff');
+  font-family: 'Cera Pro';
+  src:  url('CeraPro-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-Bold.woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Cera Pro';
+  src: url('CeraPro-Medium.woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'CeraPro';
+    font-family: 'Cera Pro';
 }
 
 /*STILE NAVBAR*/
@@ -41,7 +58,7 @@
   border-radius: 3px;
   color: black;
   font-size: small;
-  font-weight: 600;
+  font-weight: 500;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
@@ -239,11 +256,13 @@
 
 .testoslider-main1 h1 {
   font-size: 2rem;
+  font-weight: 400;
 }
 
 .testoslider-main1 h3 {
     margin-bottom: 50px;
     line-height: 2.6875rem;
+    font-weight: 400;
 }
 
 .testoslider-main1 a {
@@ -297,7 +316,10 @@
 /*testo sotto le immagini*/
   .icon span {
     display: block; /* rende il testo un blocco per forzarlo sotto l'immagine */
-    margin-top: 8px; /* spazio tra l'immagine e il testo */
+    letter-spacing: .01em;
+    font-size: 0.75rem;
+    line-height: 1.62;
+    font-weight: 500;
   }
 
   .icon-container a:hover{
