--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -59,7 +59,7 @@
   color: black;
   font-size: small;
   font-weight: 500;
-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .button-area-giochi:hover {
@@ -266,7 +266,8 @@ box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .testoslider-main1 a {
-    font-weight: 600;
+    font-size: 1rem;
+    font-weight: 500;
     background-color: black;
     color: white;
     padding: 12px;
@@ -276,7 +277,8 @@ box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .testoslider-main1 a:hover{
-  text-decoration: underline;
+  background-color: white;
+  color: black;
 }
 
 .background_main1 {
