Aggiunte modifiche ai bottoni della section1

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -262,6 +262,7 @@
 .testoslider-main1 h3 {
     margin-bottom: 50px;
     line-height: 2.6875rem;
+    font-size: 1.125rem;
     font-weight: 400;
 }
 
