--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -747,8 +747,13 @@ a {
 }
 
 .testo-section6 h1{
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 400;
+  line-height: 2.6875rem;
+}
+
+.testo-section6 p{
+  font-size: 1.125rem;
 }
 
 .iper-shop-now6{
