--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -213,7 +213,7 @@
 }
 
 #menu-container{
-  background-color: #fecf03;
+  background-color: rgb(255, 213, 2)
 }
 
 /* STILE SECTION 1 */
@@ -230,7 +230,8 @@
 
 .testoslider-main1 {
     position: absolute;
-    left: 10%;
+    max-width: 35%;
+    left: 6.475rem;
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
@@ -239,7 +240,7 @@
 .align-slider-main1 {
     height: auto;
     text-align: center;
-    margin-bottom: 0;
+    margin: 0;
     background-color: rgb(255, 255, 255);
 }
 
@@ -255,26 +256,55 @@
 }
 
 .testoslider-main1 h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  line-height: 4.120rem;
   font-weight: 400;
 }
 
 .testoslider-main1 h3 {
+    text-align: left;
     margin-bottom: 50px;
-    line-height: 2.6875rem;
+    line-height: 1.75rem;
     font-size: 1.125rem;
     font-weight: 400;
 }
+@media screen and (min-width: 601px) {
+  .buttons-main1 {
+    -moz-box-pack: start;
+    justify-content: flex-start;
+  }
+}
+.buttons-main1 {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px -0.625rem;
+  gap: 20px;
+  padding-left: 10px;
+  
+}
 
 .testoslider-main1 a {
-    font-size: 1rem;
-    font-weight: 500;
-    background-color: black;
-    color: white;
-    padding: 12px;
-    border-radius: 5px;
     text-decoration: none;
+    width: auto;
+  border-width: 1px;
+  border-style: solid;
+  border-collapse: collapse;
+  text-align: center;
+  border-color: transparent;
+  border-radius: 4px;
+  font-size: 1rem;
+  line-height: 1.5625rem;
+  font-weight: 500;
+  text-transform: none;
+  padding: 0.625rem 1.325rem 0.625rem 1.325rem;
+  background: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  margin-top: -25px;
     
+}
+
+.testoslider-main1 svg {
+  margin-left: 0.75rem;
 }
 
 .testoslider-main1 a:hover{
