--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -128,7 +128,10 @@
 
 .sign-in-link-style {
   display: flex;
+  align-items: center;
   gap: 10px;
+  font-size: 0.75rem;
+  font-weight: 500;
   text-decoration: none;
   color: black;
 }
