--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -69,7 +69,7 @@
 .mar10-button-lr {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   padding-left: 11em;
 }
@@ -88,6 +88,8 @@
 }
 
 .mar10-shop-now {
+  font-size: 0.75rem;
+  font-weight: 400;
   text-decoration: none;
   color: #005aD2;
 }
