--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -407,8 +407,10 @@
 }
 
 .title-main-section2 h2 {
-  font-weight: 500;
+  font-size: 2rem;
+  font-weight: 400;
 }
+
 
 .container-s2 {
   display: flex;
@@ -434,10 +436,15 @@
 .container-h3-s2{
   display: flex;
   justify-content: center;
+  font-size: 1.25rem;
+  font-weight: 500;
   padding-top: 15px;
 }
 
 .container-text-s2{
+  text-align: center;
+  font-size: 0.875rem;
+  font-weight: 400;
   padding-top: 10px;
 }
 
@@ -445,16 +452,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5px;
-  padding: 20px;
+  gap: 0.3125rem;
+  padding: 1.25rem;
 }
 
 .shop-now2{
-  font-weight: bold;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
 .snow2-2{
-  padding-top: 45px ;
+  padding-top: 2.8125rem ;
 }
 
 .snow2-3{
