--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -594,8 +594,19 @@ a {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+}
+
+.circle-ctn-heart {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  border-radius: 50%;
+  z-index: -1;
+  background-color: #f8f8f8;
+  position: absolute;
 }
 
 /*style immagine*/
