--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -525,6 +525,8 @@ a {
   margin-right: 40px;
 }
 
+.carousel-card-wrapper{}
+
 /*stile button scorrimento*/
 .carousel-button {
   cursor: pointer;
@@ -614,8 +616,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 290px;
-  width: 290px;
+  height: 18rem;
+  width: auto;
   background-color: white;
   /*border: solid 1px black;*/
 }
@@ -710,6 +712,18 @@ a {
   justify-content: space-between;
   color: white;
   padding: 12px 10px 10px 10px ;
+}
+
+@media only screen and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3){
+  .product-image-carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 18rem;
+    width: 290px;
+    background-color: white;
+    /*border: solid 1px black;*/
+  }
 }
 
 /*scrollbar carosello*/
@@ -933,12 +947,12 @@ a {
   display: flex;
   flex-direction: column;
   padding: 10px;
-  width: 50%;
+  width: 25%;
   height: auto;
 }
 
 .card{
-  width: 100%;
+  width: 25%;
 }
 
 .img-section8{
@@ -1334,7 +1348,7 @@ a {
     content: none;
   }
 }
-@media screen and (min-width: 1024px) and (max-width: 1366px) {
+@media screen and (min-width: 1024px) and (max-height: 1366px) {
   .box2-footer2 {
     display: flex;
     flex-wrap: wrap;
@@ -1342,7 +1356,7 @@ a {
 
   .box2-ul {
     width: 50%; 
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     padding: 0 10px; 
   }
 
