--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -12,7 +12,7 @@
   font-weight: 700;
   font-style:normal;
   font-display:swap;
-}
+} 
 
 @font-face {
   font-family: 'Cera Pro';
@@ -1378,23 +1378,11 @@ a {
   .container-footer1 a[href*="gaming"]::after {
     content: none;
   }
-}
-@media screen and (min-width: 1024px) and (max-height: 1366px) {
-  .box2-footer2 {
-    display: flex;
-    flex-wrap: wrap;
+  .container-footer1 {
+    margin: 0 30px; /* Imposta i margini a 10px a sinistra e a destra */
   }
-
-  .box2-ul {
-    width: 50%; 
-    /* box-sizing: border-box; */
-    padding: 0 10px; 
-  }
-
-  .box2-ul:nth-child(3),
-  .box2-ul:nth-child(4) {
-    margin-top: 20px; 
+  .container-footer1 p {
+    font-size: 14px; /* Riduci la dimensione del testo a 14px */
   }
 }
-
 
