--- a/CSS/media-global_style.css
+++ b/CSS/media-global_style.css
@@ -43,6 +43,7 @@
     }
     .container-footer1 {
       margin: 0 30px; 
+      margin-bottom: 20px;
     }
     .container-footer1 p {
       font-size: 14px; 
