--- a/CSS/media-global_style.css
+++ b/CSS/media-global_style.css
@@ -1,3 +1,4 @@
+/* STYLE NAVBAR MEDIA IPAD */
 @media only screen 
   and (min-device-width: 1024px) 
   and (max-device-width: 1366px)
@@ -27,6 +28,7 @@
       align-items: center;
       gap: 60px;
     }
+/* STYLE FOOTER1 MEDIA IPAD */
     .container-footer1 p {
       display: -webkit-box;
       -webkit-line-clamp: 3; 
@@ -48,10 +50,11 @@
     .container-footer1 p {
       font-size: 14px; 
     }
-    .line-divider {
-      border: none; 
-      border-top: 1px solid #ccc; 
-      margin-top: 20px; 
-      margin-bottom: 20px; 
-  }
+/* STYLE FOOTER2 MEDIA IPAD */
+    .box3-footer2{
+      border-top: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
+      padding-top: 40px;
+    }
+   
 }
