--- a/CSS/media-global_style.css
+++ b/CSS/media-global_style.css
@@ -1,8 +1,10 @@
-/* STYLE NAVBAR MEDIA IPAD */
+/* MEDIA QUERY IPAD PRO */
 @media only screen 
   and (min-device-width: 1024px) 
   and (max-device-width: 1366px)
   and (orientation: portrait) {
+
+/* STYLE NAVBAR MEDIA IPAD */
     .navbar {
       display: flex;
       justify-content: space-around;
