--- a/CSS/media-global_style.css
+++ b/CSS/media-global_style.css
@@ -87,16 +87,16 @@
   and (orientation: portrait) {
 
 /* STYLE NAVBAR MEDIA IPHONE */
-.navbar-container-general {
+/* .navbar-container-general {
   display: none;
-}
-/* 
+} */
+
 .navbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   max-width: 100rem;
   margin: 0 auto;
-  gap: 17rem;
+  gap: 0;
   align-items: center;
   height: 3.7rem;
   background-color: #f8f8f8;
@@ -104,7 +104,19 @@
 
 .button-area-giochi{
   display: none;
-} */
+}
+
+.sign-in-box{
+  display: none;
+}
+
+.menu-links-cnt {
+  display: none;
+}
+
+.menu-search-shop {
+  display: none;
+}
 
 /* STYLE CONTENITORE GENERALE MEDIA IPHONE */
 .contenitore-generale {
