--- a/CSS/media-global_style.css
+++ b/CSS/media-global_style.css
@@ -131,4 +131,191 @@
 }
 }
 
+/* STYLE FOOTER2 MEDIA IPHONE */
+
+.container-footer2-generale{
+  width: 100%;
+  background-color: #1f1d48;
+}
+
+.f_section2{
+  max-width: 100rem;
+  margin: 0 auto;
+  padding-top:30px ;
+}
+
+.container-generale-footer2{
+  display: flex;
+  flex-direction: column;
+  background-color: #1f1d48;
+}
+
+.div1-footer2{
+  display: flex;
+  flex-direction: column;
+  background-color: #1f1d48;
+  margin-bottom: 40px;
+}
+.div2-footer2{
+  height: 100px;
+  background-color: #1f1d48;
+}
+
+.box1-footer2{
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: 30%;
+  background-color: #1f1d48;
+}
+
+.box1-logo{
+  display: flex;
+  flex-direction: column;
+  align-items:self-start;
+  gap:90px;
+  height: auto;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.logo-footer2{
+  height: 10px;
+  width: 100px;
+  margin: 15px;
+}
+
+.botton-footer2{
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(24,21,45);
+  color: #f0f0f0;
+  padding: 7px;
+  margin: 15px;
+  width: 45%;
+  gap:15px;
+  cursor: pointer;
+}
+
+.button-f2{
+  font-size: medium;
+  background: transparent;
+  border: none;
+  color: white;
+  
+}
+
+.box1-iper{
+  display: flex;
+  flex-direction: column;
+  margin:15px;
+  gap: 30px;
+  color: white;
+}
+
+.box2-footer2{
+  display: flex;
+  flex-direction: row;
+  height: auto;
+  width: 70%;
+  background-color: #1f1d48;
+}
+
+.box2-ul{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  height: auto;
+  width: 32%;
+  background-color: #1f1d48;
+  color: white;
+  margin: 10px;
+  padding: 10px;
+  flex-wrap: wrap;
+}
+
+.box2-ul h3{
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.li-f2{
+  display: flex;
+  font-size: 1rem;
+  flex-direction: column;
+  gap:20px;
+  list-style-type: none;
+}
+
+.box3-footer2{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 200px;
+  width: 100%;
+  background-color: #1f1d48;
+  color: white;
+}
+
+.subscribe-footer2{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+  margin: 15px;
+}
+
+.email-footer2{
+  display: flex;
+
+}
+
+.email-input-f2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+}
+
+.email-button-f2{
+  border: none;
+  padding:20px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: #e96f14;
+  cursor: pointer;
+}
+
+.social-footer2{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  gap:30px;
+}
+
+.social-footer2 h3{
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.subscribe-footer2 h3{
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.svg-social-f2{
+  display: flex;
+  gap:10px;
+}
+
+.link-logo-f2{
+  font-weight: 400;
+}
+
+.link-f2:hover{
+  text-decoration: underline;
+}
+
+.li-f2-link:hover{
+  text-decoration:  underline;
+}
 
