--- a/assets/images/M_Section3/Home _ LEGO® Shop ufficiale IT_files/media-global_style.css
+++ b/assets/images/M_Section3/Home _ LEGO® Shop ufficiale IT_files/media-global_style.css
@@ -152,6 +152,7 @@
 
 .div1-footer2{
   display: flex;
+  flex-direction: column;
   background-color: #1f1d48;
   margin-bottom: 40px;
 }
@@ -248,6 +249,7 @@
 
 .box3-footer2{
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   height: 200px;
   width: 100%;
