--- a/CSS/media-global_style.css
+++ b/CSS/media-global_style.css
@@ -317,3 +317,10 @@
   text-decoration:  underline;
 }
 
+
+/*media query caroselli*/
+@media  screen and (min-width: 1201px) {
+  .carousel-card {
+    width: calc(25% + 0.546875rem);
+  }
+}
